[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/MiniMapa/Interceptor.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/MiniMapa/EstacionRecarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/MiniMapa/Rele.png" type="Texture" id=3]
[ext_resource path="res://Juego/UI/MiniMapa/BaseEnemiga3.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/FondoMiniMapa.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/MiniMapa/Player.png" type="Texture" id=7]
[ext_resource path="res://Juego/UI/MiniMapa/MiniMapa.gd" type="Script" id=9]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -102.0
margin_right = 20.0
margin_bottom = -62.0
script = ExtResource( 9 )

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 40.0
margin_bottom = 40.0

[node name="MiniMapa" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
modulate = Color( 1, 1, 1, 0.49 )
scale = Vector2( 0.616766, 0.616766 )
texture = ExtResource( 6 )

[node name="BaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="EstacionRecarga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
visible = false
self_modulate = Color( 1, 0, 0.984314, 1 )
position = Vector2( 81, -47 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Player" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
position = Vector2( 0, 3 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Interceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
visible = false
modulate = Color( 0.788235, 0.741176, 0.0235294, 1 )
texture = ExtResource( 1 )

[node name="Rele" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/TextureRect"]
visible = false
modulate = Color( 0, 1, 1, 1 )
texture = ExtResource( 3 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
